--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "homepage": "https://www.nodercms.com",
   "keywords": [
-    "NoderCMS",
+    "ncms",
     "node cms",
     "CMS",
     "cms"
